[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "missingno>=0.5.2",
    "numpy>=2.3.4",
    "panda>=0.3.1",
    "pandas>=2.3.3",
    "prince>=0.16.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tensorflow>=2.20.0",
]
